<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="judul">Temperature Converter\nPilih satuan suhu awal dan hasil convert akan memunculkan nilai 2 suhu lainnya\n C=celcius K=Kelvin F=Fahrenheit</string>
    <string name="jenis_termometer">Input nilai suhu</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="convert">Convert</string>
    <string name="reset">Reset</string>
    <string name="hasil_convert1">Celsius = %1$.2f</string>
    <string name="hasil_convert2">Kelvin = %1$.2f</string>
    <string name="hasil_convert3">Fahrenheit = %1$.2f</string>
    <string name="nilai_invalid">Nilai tidak boleh kosong</string>
    <string name="jenis_invalid">Jenis tidak boleh kosong</string>
    <string name="copyright">Temperature Convertor merupakan sebuah aplikasi android yang berguna untuk convert suatu suhu ke jenis suhu lainnya.\n\nTemukan kodenya di https://github.com/davidmpurba/6706201142_Assessment_Mobpro1 \n\nCopyright @ 2022 David Marsen Purba..\nAll rights reserved. </string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="bagikan_template">Celsius = %1$.2f\nKelvin = %2$.2f\nFahrenheit = %3$.2f</string>
    <string name="history">History</string>
    <string name="bagikan">Bagikan</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">History</string>
    <string name="hasil_c">Celsius = %1$.2f</string>
    <string name="hasil_f">Fahrenheit = %1$.2f</string>
    <string name="hasil_k">Kelvin = %1$.2f</string>
    <string name="hapus_histori">Hapus history</string>
    <string name="konfirmasi_hapus">Hapus semua history</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="hasil_convert">Hasil Convert</string>
    <string name="Rumus">Rumus Konversi</string>
    <string name="about_me">Tentang Saya</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update Info terbaru Temperature Convertor</string>
    <string name="notif_title">Ayo gunakan lagi!</string>
    <string name="notif_text">Convert ke semua jenis suhu..</string>

</resources>